--- a/src/css/Mobile.css
+++ b/src/css/Mobile.css
@@ -2,6 +2,7 @@
      /* width: 70vw; */
     /* height: 35vh;  */
     display: flex;
+    flex-wrap: wrap;
     padding: 0 10% 0 10%;
     justify-content: space-between;
     /* border: 1px solid black; */
